# solar-prediction-austria

./: 01_Baseline_Gross_Generation.ipynb  02_Net_Feed_In.ipynb  README.md  pyproject.toml
data/: solar_prod.csv  weather_data.csv
