[project]
name = "solar-prediction-austria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "seaborn",
    "matplotlib",
    "scikit-learn",
    "XGBoost",
    "shap",
    "pvlib"
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
